Import useful functions and compute the derivative

--- a/ml-regression/Ridge Regression/week-4-ridge-regression-assignment-2-blank.ipynb
+++ b/ml-regression/Ridge Regression/week-4-ridge-regression-assignment-2-blank.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -53,11 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1492398999.log.0\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')"
    ]
@@ -85,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -96,12 +111,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_numpy_data(data_sframe, features, output):\n",
+    "    data_sframe['constant'] = 1 # this is how you add a constant column to an SFrame\n",
+    "    # add the column 'constant' to the front of the features list so that we can extract it along with the others:\n",
+    "    features = ['constant'] + features # this is how you combine two lists\n",
+    "    # select the columns of data_SFrame given by the features list into the SFrame features_sframe (now including constant):\n",
+    "    features_sframe = data_sframe[features]\n",
+    "    # the following line will convert the features_SFrame into a numpy matrix:\n",
+    "    feature_matrix = features_sframe.to_numpy()\n",
+    "    # assign the column of data_sframe associated with the output to the SArray output_sarray\n",
+    "    output_sarray = data_sframe[output]\n",
+    "    # the following will convert the SArray into a numpy array by first converting it to a list\n",
+    "    output_array = output_sarray.to_numpy()\n",
+    "    return(feature_matrix, output_array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,12 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def predict_output(feature_matrix, weights):\n",
+    "    # assume feature_matrix is a numpy matrix containing the features as columns and weights is a corresponding numpy array\n",
+    "    # create the predictions vector by using np.dot()\n",
+    "    predictions = np.dot(feature_matrix, weights)\n",
+    "    \n",
+    "    return(predictions)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,17 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def feature_derivative_ridge(errors, feature, weight, l2_penalty, feature_is_constant):\n",
-    "    # If feature_is_constant is True, derivative is twice the dot product of errors and feature\n",
-    "    \n",
+    "    derivative = None\n",
+    "    # If feature_is_constant is True, derivative is twice the dot product of errors and feature    \n",
+    "    if feature_is_constant:\n",
+    "        derivative = 2*np.dot(errors, feature)    \n",
     "    # Otherwise, derivative is twice the dot product plus 2*l2_penalty*weight\n",
-    "    \n",
+    "    else:\n",
+    "        derivative = 2*np.dot(errors, feature) + 2*l2_penalty*weight\n",
     "    return derivative"
    ]
   },
@@ -183,11 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5.65541667824e+13\n",
+      "-5.65541667824e+13\n",
+      "\n",
+      "-22446749336.0\n",
+      "-22446749336.0\n"
+     ]
+    }
+   ],
    "source": [
     "(example_features, example_output) = get_numpy_data(sales, ['sqft_living'], 'price') \n",
     "my_weights = np.array([1., 10.])\n",
