Implement gradient descent

--- a/ml-regression/Ridge Regression/week-4-ridge-regression-assignment-2-blank.ipynb
+++ b/ml-regression/Ridge Regression/week-4-ridge-regression-assignment-2-blank.ipynb
@@ -288,7 +288,7 @@
     "    iteration = 0 # iteration counter\n",
     "    print_frequency = 1  # for adjusting frequency of debugging output\n",
     "    \n",
-    "    #while not reached maximum number of iterations:\n",
+    "    while iteration < max_iterations:\n",
     "        iteration += 1  # increment iteration counter\n",
     "        ### === code section for adjusting frequency of debugging output. ===\n",
     "        if iteration == 10:\n",
@@ -300,8 +300,10 @@
     "        ### === end code section ===\n",
     "        \n",
     "        # compute the predictions based on feature_matrix and weights using your predict_output() function\n",
+    "        predictions = predict_output(feature_matrix, initial_weights)\n",
     "\n",
     "        # compute the errors as predictions - output\n",
+    "        errors = predictions - output        \n",
     "\n",
     "        # from time to time, print the value of the cost function\n",
     "        if iteration%print_frequency==0:\n",
@@ -311,8 +313,11 @@
     "            # Recall that feature_matrix[:,i] is the feature column associated with weights[i]\n",
     "            # compute the derivative for weight[i].\n",
     "            #(Remember: when i=0, you are computing the derivative of the constant!)\n",
-    "\n",
+    "            is_constant = i == 0\n",
+    "            derivative = feature_derivative_ridge(errors, feature_matrix[:, i], weights[i], l2_penalty, is_constant)\n",
+    "            \n",
     "            # subtract the step size times the derivative from the current weight\n",
+    "            weights[i] = weights[i] - step_size*derivative[i]\n",
     "            \n",
     "    print 'Done with gradient descent at iteration ', iteration\n",
     "    print 'Learned weights = ', str(weights)\n",
