--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -48,12 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1493570056.log.0\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')"
    ]
@@ -74,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -141,11 +156,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>Linear regression:</pre>"
+      ],
+      "text/plain": [
+       "Linear regression:"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of examples          : 21613</pre>"
+      ],
+      "text/plain": [
+       "Number of examples          : 21613"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of features          : 17</pre>"
+      ],
+      "text/plain": [
+       "Number of features          : 17"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of unpacked features : 17</pre>"
+      ],
+      "text/plain": [
+       "Number of unpacked features : 17"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of coefficients    : 18</pre>"
+      ],
+      "text/plain": [
+       "Number of coefficients    : 18"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting Accelerated Gradient (FISTA)</pre>"
+      ],
+      "text/plain": [
+       "Starting Accelerated Gradient (FISTA)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+-----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+-----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Iteration | Passes   | Step size | Elapsed Time | Training-max_error | Training-rmse |</pre>"
+      ],
+      "text/plain": [
+       "| Iteration | Passes   | Step size | Elapsed Time | Training-max_error | Training-rmse |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+-----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+-----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Tuning step size. First iteration could take longer than subsequent iterations.</pre>"
+      ],
+      "text/plain": [
+       "Tuning step size. First iteration could take longer than subsequent iterations."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1         | 2        | 0.000002  | 1.400931     | 6962915.603493     | 426631.749026 |</pre>"
+      ],
+      "text/plain": [
+       "| 1         | 2        | 0.000002  | 1.400931     | 6962915.603493     | 426631.749026 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 2         | 3        | 0.000002  | 1.486924     | 6843144.200219     | 392488.929838 |</pre>"
+      ],
+      "text/plain": [
+       "| 2         | 3        | 0.000002  | 1.486924     | 6843144.200219     | 392488.929838 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 3         | 4        | 0.000002  | 1.522949     | 6831900.032123     | 385340.166783 |</pre>"
+      ],
+      "text/plain": [
+       "| 3         | 4        | 0.000002  | 1.522949     | 6831900.032123     | 385340.166783 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 4         | 5        | 0.000002  | 1.560481     | 6847166.848958     | 384842.383767 |</pre>"
+      ],
+      "text/plain": [
+       "| 4         | 5        | 0.000002  | 1.560481     | 6847166.848958     | 384842.383767 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 5         | 6        | 0.000002  | 1.601012     | 6869667.895833     | 385998.458623 |</pre>"
+      ],
+      "text/plain": [
+       "| 5         | 6        | 0.000002  | 1.601012     | 6869667.895833     | 385998.458623 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 6         | 7        | 0.000002  | 1.638035     | 6847177.773672     | 380824.455891 |</pre>"
+      ],
+      "text/plain": [
+       "| 6         | 7        | 0.000002  | 1.638035     | 6847177.773672     | 380824.455891 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+-----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+-----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>TERMINATED: Iteration limit reached.</pre>"
+      ],
+      "text/plain": [
+       "TERMINATED: Iteration limit reached."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>This model may not be optimal. To improve it, consider increasing `max_iterations`.</pre>"
+      ],
+      "text/plain": [
+       "This model may not be optimal. To improve it, consider increasing `max_iterations`."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_all = graphlab.linear_regression.create(sales, target='price', features=all_features,\n",
     "                                              validation_set=None, \n",
@@ -161,12 +429,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">name</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">index</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">value</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">stderr</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">(intercept)</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">274873.05595</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bedrooms</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bedrooms_square</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bathrooms</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">8468.53108691</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_living</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">24.4207209824</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_living_sqrt</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">350.060553386</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_lot</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_lot_sqrt</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">floors</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">floors_square</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[18 rows x 4 columns]<br/>Note: Only the head of the SFrame is printed.<br/>You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns.\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\tname\tstr\n",
+       "\tindex\tstr\n",
+       "\tvalue\tfloat\n",
+       "\tstderr\tfloat\n",
+       "\n",
+       "Rows: 18\n",
+       "\n",
+       "Data:\n",
+       "+------------------+-------+---------------+--------+\n",
+       "|       name       | index |     value     | stderr |\n",
+       "+------------------+-------+---------------+--------+\n",
+       "|   (intercept)    |  None |  274873.05595 |  None  |\n",
+       "|     bedrooms     |  None |      0.0      |  None  |\n",
+       "| bedrooms_square  |  None |      0.0      |  None  |\n",
+       "|    bathrooms     |  None | 8468.53108691 |  None  |\n",
+       "|   sqft_living    |  None | 24.4207209824 |  None  |\n",
+       "| sqft_living_sqrt |  None | 350.060553386 |  None  |\n",
+       "|     sqft_lot     |  None |      0.0      |  None  |\n",
+       "|  sqft_lot_sqrt   |  None |      0.0      |  None  |\n",
+       "|      floors      |  None |      0.0      |  None  |\n",
+       "|  floors_square   |  None |      0.0      |  None  |\n",
+       "+------------------+-------+---------------+--------+\n",
+       "[18 rows x 4 columns]\n",
+       "Note: Only the head of the SFrame is printed.\n",
+       "You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns."
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_all.get('coefficients')"
+   ]
   },
   {
    "cell_type": "markdown",
