--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
@@ -429,121 +429,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
-       "    <tr>\n",
-       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">name</th>\n",
-       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">index</th>\n",
-       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">value</th>\n",
-       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">stderr</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">(intercept)</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">274873.05595</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bedrooms</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bedrooms_square</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bathrooms</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">8468.53108691</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_living</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">24.4207209824</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_living_sqrt</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">350.060553386</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_lot</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_lot_sqrt</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">floors</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">floors_square</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "</table>\n",
-       "[18 rows x 4 columns]<br/>Note: Only the head of the SFrame is printed.<br/>You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns.\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Columns:\n",
-       "\tname\tstr\n",
-       "\tindex\tstr\n",
-       "\tvalue\tfloat\n",
-       "\tstderr\tfloat\n",
-       "\n",
-       "Rows: 18\n",
-       "\n",
-       "Data:\n",
-       "+------------------+-------+---------------+--------+\n",
-       "|       name       | index |     value     | stderr |\n",
-       "+------------------+-------+---------------+--------+\n",
-       "|   (intercept)    |  None |  274873.05595 |  None  |\n",
-       "|     bedrooms     |  None |      0.0      |  None  |\n",
-       "| bedrooms_square  |  None |      0.0      |  None  |\n",
-       "|    bathrooms     |  None | 8468.53108691 |  None  |\n",
-       "|   sqft_living    |  None | 24.4207209824 |  None  |\n",
-       "| sqft_living_sqrt |  None | 350.060553386 |  None  |\n",
-       "|     sqft_lot     |  None |      0.0      |  None  |\n",
-       "|  sqft_lot_sqrt   |  None |      0.0      |  None  |\n",
-       "|      floors      |  None |      0.0      |  None  |\n",
-       "|  floors_square   |  None |      0.0      |  None  |\n",
-       "+------------------+-------+---------------+--------+\n",
-       "[18 rows x 4 columns]\n",
-       "Note: Only the head of the SFrame is printed.\n",
-       "You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns."
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-------+---------------+--------+\n",
+      "|       name       | index |     value     | stderr |\n",
+      "+------------------+-------+---------------+--------+\n",
+      "|   (intercept)    |  None |  274873.05595 |  None  |\n",
+      "|     bedrooms     |  None |      0.0      |  None  |\n",
+      "| bedrooms_square  |  None |      0.0      |  None  |\n",
+      "|    bathrooms     |  None | 8468.53108691 |  None  |\n",
+      "|   sqft_living    |  None | 24.4207209824 |  None  |\n",
+      "| sqft_living_sqrt |  None | 350.060553386 |  None  |\n",
+      "|     sqft_lot     |  None |      0.0      |  None  |\n",
+      "|  sqft_lot_sqrt   |  None |      0.0      |  None  |\n",
+      "|      floors      |  None |      0.0      |  None  |\n",
+      "|  floors_square   |  None |      0.0      |  None  |\n",
+      "|    waterfront    |  None |      0.0      |  None  |\n",
+      "|       view       |  None |      0.0      |  None  |\n",
+      "|    condition     |  None |      0.0      |  None  |\n",
+      "|      grade       |  None | 842.068034898 |  None  |\n",
+      "|    sqft_above    |  None | 20.0247224171 |  None  |\n",
+      "|  sqft_basement   |  None |      0.0      |  None  |\n",
+      "|     yr_built     |  None |      0.0      |  None  |\n",
+      "|   yr_renovated   |  None |      0.0      |  None  |\n",
+      "+------------------+-------+---------------+--------+\n",
+      "[18 rows x 4 columns]\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "model_all.get('coefficients')"
+    "model_all.get('coefficients').print_rows(num_rows=len(all_features)+1)"
    ]
   },
   {
@@ -576,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -603,12 +526,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSS: 6.25766285142e+14, l1_penalty:10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "lowest_rss = -1\n",
+    "l1_penalty_lowest = -1\n",
+    "for l1_penalty in np.logspace(1, 7, num=13):\n",
+    "    model = graphlab.linear_regression.create(training, target='price', features=all_features,\n",
+    "                                              validation_set=None, \n",
+    "                                              l2_penalty=0., l1_penalty=l1_penalty, verbose=False)\n",
+    "    predicted = model.predict(validation)\n",
+    "    errors = predicted-validation['price']\n",
+    "    rss = (errors*errors).sum()\n",
+    "    \n",
+    "    if lowest_rss == -1 or (lowest_rss != -1 and rss < lowest_rss):\n",
+    "        l1_penalty_lowest = l1_penalty\n",
+    "        lowest_rss = rss\n",
+    "        \n",
+    "print('RSS: '+str(lowest_rss)+\", l1_penalty:\"+str(l1_penalty_lowest))"
+   ]
   },
   {
    "cell_type": "code",
@@ -633,7 +582,9 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -645,12 +596,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = graphlab.linear_regression.create(training, target='price', features=all_features, validation_set=None,\n",
+    "                                         l2_penalty=0., l1_penalty=10, verbose=False)\n",
+    "model.get('coefficients')['value'].nnz()"
+   ]
   },
   {
    "cell_type": "markdown",
