Limit the number os nonzero weights

--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -681,12 +681,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(100000000.0, 18),\n",
+       " (127427498.57031322, 18),\n",
+       " (162377673.91887242, 18),\n",
+       " (206913808.11147901, 18),\n",
+       " (263665089.87303555, 17),\n",
+       " (335981828.62837881, 17),\n",
+       " (428133239.8719396, 17),\n",
+       " (545559478.11685145, 17),\n",
+       " (695192796.17755914, 17),\n",
+       " (885866790.41008317, 16),\n",
+       " (1128837891.6846883, 15),\n",
+       " (1438449888.2876658, 15),\n",
+       " (1832980710.8324375, 13),\n",
+       " (2335721469.0901213, 12),\n",
+       " (2976351441.6313128, 10),\n",
+       " (3792690190.7322536, 6),\n",
+       " (4832930238.5717525, 5),\n",
+       " (6158482110.6602545, 3),\n",
+       " (7847599703.5146227, 1),\n",
+       " (10000000000.0, 1)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = []\n",
+    "for l1_penalty in l1_penalty_values:\n",
+    "    model = graphlab.linear_regression.create(training, target='price', features=all_features, l1_penalty=l1_penalty,\n",
+    "                                             l2_penalty=0., validation_set=None, verbose=False)\n",
+    "    data.append((l1_penalty, model['coefficients']['value'].nnz()))\n",
+    "    \n",
+    "data"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -708,14 +746,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3792690190.7322536, 2976351441.6313128)\n"
+     ]
+    }
+   ],
    "source": [
-    "l1_penalty_min = \n",
-    "l1_penalty_max = "
+    "l1_penalty_min = 0\n",
+    "min_id = 0\n",
+    "l1_penalty_max = 0\n",
+    "max_id = 0\n",
+    "\n",
+    "aux_min = l1_penalty_values[len(l1_penalty_values)-1]+1\n",
+    "aux_max = -1\n",
+    "\n",
+    "i = 0\n",
+    "for item in data:\n",
+    "    if aux_max < item[0] and item[1] > max_nonzeros:\n",
+    "        aux_max = item[0]\n",
+    "        max_id = i\n",
+    "    if aux_min > item[0] and item[1] < max_nonzeros:\n",
+    "        aux_min = item[0]\n",
+    "        min_id = i\n",
+    "    i += 1\n",
+    "    \n",
+    "l1_penalty_min = aux_min\n",
+    "l1_penalty_max = aux_max\n",
+    "print(l1_penalty_min, l1_penalty_max)\n",
+    "\n"
    ]
   },
   {
