Exploring the narrow range of values to find the solution with the right number of non-zeros that has lowest RSS on the validation set

--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -824,12 +824,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2976351441.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "lowest_rss = -1\n",
+    "l1_lowest = 0\n",
+    "\n",
+    "for l1_penalty in l1_penalty_values:\n",
+    "    model = graphlab.linear_regression.create(training, target='price', features=all_features, validation_set=None,\n",
+    "                                             l1_penalty=l1_penalty, l2_penalty=0., verbose=False)\n",
+    "    predicted = model.predict(validation)\n",
+    "    error = predicted-validation['price']\n",
+    "    rss = (error*error).sum()\n",
+    "    \n",
+    "    if (lowest_rss == -1 or lowest_rss > rss) and model.get(''):\n",
+    "        lowest_rss = rss\n",
+    "        l1_lowest = l1_penalty\n",
+    "        \n",
+    "print(l1_lowest)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -842,9 +866,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-------+---------------+--------+\n",
+      "|       name       | index |     value     | stderr |\n",
+      "+------------------+-------+---------------+--------+\n",
+      "|   (intercept)    |  None | 196100.937806 |  None  |\n",
+      "|     bedrooms     |  None | 2181.57432107 |  None  |\n",
+      "| bedrooms_square  |  None |      0.0      |  None  |\n",
+      "|    bathrooms     |  None | 17962.6966612 |  None  |\n",
+      "|   sqft_living    |  None | 34.1424656512 |  None  |\n",
+      "| sqft_living_sqrt |  None | 789.319789078 |  None  |\n",
+      "|     sqft_lot     |  None |      0.0      |  None  |\n",
+      "|  sqft_lot_sqrt   |  None |      0.0      |  None  |\n",
+      "|      floors      |  None |  3665.9308176 |  None  |\n",
+      "|  floors_square   |  None |      0.0      |  None  |\n",
+      "|    waterfront    |  None |      0.0      |  None  |\n",
+      "|       view       |  None | 11333.8410308 |  None  |\n",
+      "|    condition     |  None |      0.0      |  None  |\n",
+      "|      grade       |  None | 3578.90040044 |  None  |\n",
+      "|    sqft_above    |  None | 32.7432013718 |  None  |\n",
+      "|  sqft_basement   |  None | 12.7953811359 |  None  |\n",
+      "|     yr_built     |  None |      0.0      |  None  |\n",
+      "|   yr_renovated   |  None |      0.0      |  None  |\n",
+      "+------------------+-------+---------------+--------+\n",
+      "[18 rows x 4 columns]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = graphlab.linear_regression.create(training, target='price', features=all_features, validation_set=None,\n",
+    "                                         l1_penalty=l1_lowest, l2_penalty=0., verbose=False)\n",
+    "model.get('coefficients').print_rows(num_rows=len(all_features)+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">name</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">index</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">value</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">stderr</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">(intercept)</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">196100.937806</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bedrooms</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">2181.57432107</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bathrooms</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">17962.6966612</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_living</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">34.1424656512</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_living_sqrt</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">789.319789078</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">floors</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">3665.9308176</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">view</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">11333.8410308</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">grade</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">3578.90040044</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_above</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">32.7432013718</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_basement</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">12.7953811359</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[? rows x 4 columns]<br/>Note: Only the head of the SFrame is printed. This SFrame is lazily evaluated.<br/>You can use sf.materialize() to force materialization.\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\tname\tstr\n",
+       "\tindex\tstr\n",
+       "\tvalue\tfloat\n",
+       "\tstderr\tfloat\n",
+       "\n",
+       "Rows: Unknown\n",
+       "\n",
+       "Data:\n",
+       "+------------------+-------+---------------+--------+\n",
+       "|       name       | index |     value     | stderr |\n",
+       "+------------------+-------+---------------+--------+\n",
+       "|   (intercept)    |  None | 196100.937806 |  None  |\n",
+       "|     bedrooms     |  None | 2181.57432107 |  None  |\n",
+       "|    bathrooms     |  None | 17962.6966612 |  None  |\n",
+       "|   sqft_living    |  None | 34.1424656512 |  None  |\n",
+       "| sqft_living_sqrt |  None | 789.319789078 |  None  |\n",
+       "|      floors      |  None |  3665.9308176 |  None  |\n",
+       "|       view       |  None | 11333.8410308 |  None  |\n",
+       "|      grade       |  None | 3578.90040044 |  None  |\n",
+       "|    sqft_above    |  None | 32.7432013718 |  None  |\n",
+       "|  sqft_basement   |  None | 12.7953811359 |  None  |\n",
+       "+------------------+-------+---------------+--------+\n",
+       "[? rows x 4 columns]\n",
+       "Note: Only the head of the SFrame is printed. This SFrame is lazily evaluated.\n",
+       "You can use sf.materialize() to force materialization."
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.get('coefficients')[model.get('coefficients')['value'] != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
