Fix some issues

--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-1-blank.ipynb
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -833,7 +833,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2976351441.63\n"
+      "3448968612.16\n"
      ]
     }
    ],
@@ -848,7 +848,7 @@
     "    error = predicted-validation['price']\n",
     "    rss = (error*error).sum()\n",
     "    \n",
-    "    if (lowest_rss == -1 or lowest_rss > rss) and model.get(''):\n",
+    "    if (lowest_rss == -1 or lowest_rss > rss) and model.get('coefficients')['value'].nnz() == max_nonzeros:\n",
     "        lowest_rss = rss\n",
     "        l1_lowest = l1_penalty\n",
     "        \n",
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -878,22 +878,22 @@
       "+------------------+-------+---------------+--------+\n",
       "|       name       | index |     value     | stderr |\n",
       "+------------------+-------+---------------+--------+\n",
-      "|   (intercept)    |  None | 196100.937806 |  None  |\n",
-      "|     bedrooms     |  None | 2181.57432107 |  None  |\n",
+      "|   (intercept)    |  None | 222253.192544 |  None  |\n",
+      "|     bedrooms     |  None | 661.722717782 |  None  |\n",
       "| bedrooms_square  |  None |      0.0      |  None  |\n",
-      "|    bathrooms     |  None | 17962.6966612 |  None  |\n",
-      "|   sqft_living    |  None | 34.1424656512 |  None  |\n",
-      "| sqft_living_sqrt |  None | 789.319789078 |  None  |\n",
+      "|    bathrooms     |  None | 15873.9572593 |  None  |\n",
+      "|   sqft_living    |  None | 32.4102214513 |  None  |\n",
+      "| sqft_living_sqrt |  None | 690.114773313 |  None  |\n",
       "|     sqft_lot     |  None |      0.0      |  None  |\n",
       "|  sqft_lot_sqrt   |  None |      0.0      |  None  |\n",
-      "|      floors      |  None |  3665.9308176 |  None  |\n",
+      "|      floors      |  None |      0.0      |  None  |\n",
       "|  floors_square   |  None |      0.0      |  None  |\n",
       "|    waterfront    |  None |      0.0      |  None  |\n",
-      "|       view       |  None | 11333.8410308 |  None  |\n",
+      "|       view       |  None |      0.0      |  None  |\n",
       "|    condition     |  None |      0.0      |  None  |\n",
-      "|      grade       |  None | 3578.90040044 |  None  |\n",
-      "|    sqft_above    |  None | 32.7432013718 |  None  |\n",
-      "|  sqft_basement   |  None | 12.7953811359 |  None  |\n",
+      "|      grade       |  None | 2899.42026975 |  None  |\n",
+      "|    sqft_above    |  None | 30.0115753022 |  None  |\n",
+      "|  sqft_basement   |  None |      0.0      |  None  |\n",
       "|     yr_built     |  None |      0.0      |  None  |\n",
       "|   yr_renovated   |  None |      0.0      |  None  |\n",
       "+------------------+-------+---------------+--------+\n",
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -928,61 +928,43 @@
        "    <tr>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">(intercept)</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">196100.937806</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">222253.192544</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bedrooms</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">2181.57432107</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">661.722717782</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">bathrooms</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">17962.6966612</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">15873.9572593</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_living</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">34.1424656512</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">32.4102214513</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_living_sqrt</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">789.319789078</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">floors</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">3665.9308176</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">view</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">11333.8410308</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">690.114773313</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">grade</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">3578.90040044</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">2899.42026975</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_above</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">32.7432013718</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">sqft_basement</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
-       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">12.7953811359</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">30.0115753022</td>\n",
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
        "    </tr>\n",
        "</table>\n",
@@ -1002,23 +984,20 @@
        "+------------------+-------+---------------+--------+\n",
        "|       name       | index |     value     | stderr |\n",
        "+------------------+-------+---------------+--------+\n",
-       "|   (intercept)    |  None | 196100.937806 |  None  |\n",
-       "|     bedrooms     |  None | 2181.57432107 |  None  |\n",
-       "|    bathrooms     |  None | 17962.6966612 |  None  |\n",
-       "|   sqft_living    |  None | 34.1424656512 |  None  |\n",
-       "| sqft_living_sqrt |  None | 789.319789078 |  None  |\n",
-       "|      floors      |  None |  3665.9308176 |  None  |\n",
-       "|       view       |  None | 11333.8410308 |  None  |\n",
-       "|      grade       |  None | 3578.90040044 |  None  |\n",
-       "|    sqft_above    |  None | 32.7432013718 |  None  |\n",
-       "|  sqft_basement   |  None | 12.7953811359 |  None  |\n",
+       "|   (intercept)    |  None | 222253.192544 |  None  |\n",
+       "|     bedrooms     |  None | 661.722717782 |  None  |\n",
+       "|    bathrooms     |  None | 15873.9572593 |  None  |\n",
+       "|   sqft_living    |  None | 32.4102214513 |  None  |\n",
+       "| sqft_living_sqrt |  None | 690.114773313 |  None  |\n",
+       "|      grade       |  None | 2899.42026975 |  None  |\n",
+       "|    sqft_above    |  None | 30.0115753022 |  None  |\n",
        "+------------------+-------+---------------+--------+\n",
        "[? rows x 4 columns]\n",
        "Note: Only the head of the SFrame is printed. This SFrame is lazily evaluated.\n",
        "You can use sf.materialize() to force materialization."
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
