--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -53,11 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1493578298.log.0\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')\n",
     "# In the dataset, 'floors' was defined with type string, \n",
@@ -88,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -99,12 +114,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_numpy_data(data_sframe, features, output):\n",
+    "    data_sframe['constant'] = 1 # this is how you add a constant column to an SFrame\n",
+    "    # add the column 'constant' to the front of the features list so that we can extract it along with the others:\n",
+    "    features = ['constant'] + features # this is how you combine two lists\n",
+    "    # select the columns of data_SFrame given by the features list into the SFrame features_sframe (now including constant):\n",
+    "    features_sframe = data_sframe[features]\n",
+    "    # the following line will convert the features_SFrame into a numpy matrix:\n",
+    "    feature_matrix = features_sframe.to_numpy()\n",
+    "    # assign the column of data_sframe associated with the output to the SArray output_sarray\n",
+    "    output_sarray = data_sframe[output]\n",
+    "    # the following will convert the SArray into a numpy array by first converting it to a list\n",
+    "    output_array = output_sarray.to_numpy()\n",
+    "    return(feature_matrix, output_array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,12 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def predict_output(feature_matrix, weights):\n",
+    "    # assume feature_matrix is a numpy matrix containing the features as columns and weights is a corresponding numpy array\n",
+    "    # create the predictions vector by using np.dot()\n",
+    "    predictions = np.dot(feature_matrix, weights)\n",
+    "    \n",
+    "    return(predictions)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,11 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  3.   5.   8.]\n",
+      " [  4.  12.  15.]]\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.array([[3.,5.,8.],[4.,12.,15.]])\n",
     "print X"
@@ -155,11 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  5.  13.  17.]\n"
+     ]
+    }
+   ],
    "source": [
     "norms = np.linalg.norm(X, axis=0) # gives [norm(X[:,0]), norm(X[:,1]), norm(X[:,2])]\n",
     "print norms"
@@ -174,11 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.6         0.38461538  0.47058824]\n",
+      " [ 0.8         0.92307692  0.88235294]]\n"
+     ]
+    }
+   ],
    "source": [
     "print X / norms # gives [X[:,0]/norm(X[:,0]), X[:,1]/norm(X[:,1]), X[:,2]/norm(X[:,2])]"
    ]
@@ -192,12 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def normalize_features(feature_matrix):\n",
+    "    norms = np.linalg.norm(feature_matrix, axis=0)\n",
+    "    normalized_features = feature_matrix/norms\n",
+    "    return (normalized_features, norms)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,11 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.6  0.6  0.6]\n",
+      " [ 0.8  0.8  0.8]]\n",
+      "[  5.  10.  15.]\n"
+     ]
+    }
+   ],
    "source": [
     "features, norms = normalize_features(np.array([[3.,6.,9.],[4.,8.,12.]]))\n",
     "print features\n",
