Effect of L1 penalty

--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -421,13 +421,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "prediction = "
+    "prediction = predict_output(simple_feature_matrix, weights)"
    ]
   },
   {
@@ -447,12 +447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ro = []\n",
+    "for i in range(simple_feature_matrix.shape[1]):\n",
+    "    ro.append(sum(simple_feature_matrix[:, i]*(output - prediction + weights[i]*simple_feature_matrix[:, i])))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -465,12 +469,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[79400300.034929529, 87939470.772990793, 80966698.67596525]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "left_range = 1.619333973519305e8\n",
+    "right_range = 1.7587894154598158e8   \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -488,7 +506,10 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "left_range = 1.7587894154598158e8   \n",
+    "right_range = inf"
+   ]
   },
   {
    "cell_type": "markdown",
