Single Coordinate Descent Step

--- a/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
+++ b/ml-regression/Lasso Regression/week-5-lasso-assignment-2-blank.ipynb
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -542,16 +542,16 @@
    "source": [
     "def lasso_coordinate_descent_step(i, feature_matrix, output, weights, l1_penalty):\n",
     "    # compute prediction\n",
-    "    prediction = ...\n",
+    "    prediction = predict_output(feature_matrix, weights)\n",
     "    # compute ro[i] = SUM[ [feature_i]*(output - prediction + weight[i]*[feature_i]) ]\n",
-    "    ro_i = ...\n",
+    "    ro_i = sum(feature_matrix[:, i]*(output - prediction + weights[i]*feature_matrix[:,i]))\n",
     "\n",
     "    if i == 0: # intercept -- do not regularize\n",
     "        new_weight_i = ro_i \n",
     "    elif ro_i < -l1_penalty/2.:\n",
-    "        new_weight_i = ...\n",
+    "        new_weight_i = ro_i + l1_penalty/2\n",
     "    elif ro_i > l1_penalty/2.:\n",
-    "        new_weight_i = ...\n",
+    "        new_weight_i = ro_i - l1_penalty/2\n",
     "    else:\n",
     "        new_weight_i = 0.\n",
     "    \n",
@@ -567,11 +567,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.425558846691\n"
+     ]
+    }
+   ],
    "source": [
     "# should print 0.425558846691\n",
     "import math\n",
